--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,12 @@
     @apply bg-gray-950;
   }
 }
+
+@layer utilities {
+  .animation-delay-2000 {
+    animation-delay: 2s;
+  }
+  .animation-delay-4000 {
+    animation-delay: s;
+  }
+}
