--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,3 +18,23 @@
 .screen-less-header {
   height: calc(100vh - 80px);
 }
+
+/* Custom scroll bar */
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+ background-color:  #1f2937;
+}
+
+::-webkit-scrollbar-thumb {
+   background-color:  #111827;
+  border-radius: 100vw;
+ 
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #1f2937 #111827;
+}
