--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,3 +38,10 @@
   scrollbar-width: thin;
   scrollbar-color: #1f2937 #111827;
 }
+
+
+.hamburger-react > div:nth-of-type(1),
+.hamburger-react > div:nth-of-type(2),
+.hamburger-react > div:nth-of-type(3) {
+    height: 1px !important;
+}
